tests/golden/errors/rebind_before_use.stderr
error[unused]: unused binding: each version of `x` is used before the next
  --> rebind_before_use.kso:2:3
   2 |   x = 1
         ^
